Revert "Fix selected color being invisible against certain backgrounds"
This reverts commit cac995a02746928318cea9a8cd5ffa4dab780f5b.

In later testing, we have found that mix-blend-mode applies not only to
the stroke, but to the fill (which makes sense, in retrospect). However,
this produces inaccurate colors when tiles are selected or even hovered
over. Therefore, reverting this change until a better alternative can be
found.

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -34,5 +34,5 @@
   --color-button-submit: var(--color-blue);
   --color-button-warning: var(--color-orange-500);
   --color-button-border-warning: var(--color-orange-600);
-  --color-grid-tile-selected: var(--color-white);
+  --color-grid-tile-selected: var(--color-blue);
 }
